[project]
name = "document-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]
